# LifeWeek

./: README.md  pyproject.toml
lifeweeks/: age_in_weeks_test.py  app.py  init_db.py  user_models.py
lifeweeks/static/css/: index.css  note.css  sign_up.css  top_bar.css
lifeweeks/static/js/: life.js
lifeweeks/templates/: base.html  index.html  login.html  note.html  sign_up.html  top_bar.html
