[tool.poetry]
name = "lifeweeks"
version = "0.1.0"
description = ""
authors = ["GeraAG <ag.andrew.gerasimenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
psycopg2 = "^2.9.9"
bulma = "^1.0.1"
flask-login = "^0.6.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
